tests/NormalTests/paczka1/fuzzy1/51306843.err
Error in line 11: hiXas A801 48,2
Error in line 22: Go0W S507 17,4
Error in line 15: l6ljeOvM A15 80,1
Error in line 31: Mv75yc S507 8,3
Error in line 35: l6ljeOvM S507 35,4
